Added function calculating the value of the room added to basket

--- a/src/assets/styles/_scss/_basket.scss
+++ b/src/assets/styles/_scss/_basket.scss
@@ -53,6 +53,10 @@
           width: $xs-size * 8;
         }
 
+        .room-data {
+          color: $edit-color;
+        }
+
         .price {
           font-weight: bold;
         }
