--- a/src/assets/styles/_scss/_basket.scss
+++ b/src/assets/styles/_scss/_basket.scss
@@ -23,6 +23,10 @@
 
   p {
     font-size: $xs-size * 5;
+
+    span {
+      font-size: $m-size;
+    }
   }
 
   #basket-content-box,
@@ -46,6 +50,11 @@
 
         &:hover {
           opacity: 1;
+        }
+
+        .title {
+          font-size: $l-size;
+          font-weight: bold;
         }
 
         .quant {
@@ -96,7 +105,7 @@
 
     .summary-text {
       bottom: $l-size * 4;
-      font-size: $xs-size * 4;
+      font-size: $l-size;
       font-weight: bold;
       left: $l-size * 5;
       position: absolute;
@@ -149,7 +158,7 @@
 
     .summary-text {
       bottom: $l-size * 4;
-      font-size: $xs-size * 4;
+      font-size: $l-size;
       font-weight: bold;
       left: $l-size * 5;
       position: absolute;
