Added functionality for remove deleted element from cart

--- a/src/assets/styles/_scss/_basket.scss
+++ b/src/assets/styles/_scss/_basket.scss
@@ -70,6 +70,10 @@
 
         .price {
           font-weight: bold;
+
+          &::after {
+            content: " zł";
+          }
         }
 
         .remove {
