--- a/src/assets/styles/_scss/_footer.scss
+++ b/src/assets/styles/_scss/_footer.scss
@@ -4,6 +4,7 @@ footer {
   bottom: 0;
   display: flex;
   height: 68px;
+  justify-content: space-between;
   opacity: 0.9;
   padding: 0 10px;
   position: absolute;
@@ -15,6 +16,11 @@ footer {
     &:hover {
       opacity: 0.7;
     }
+  }
+
+  .span-btn:hover {
+    opacity: 0.7;
+    cursor: pointer;
   }
 }
 
