Fixed display elements in cart

--- a/src/assets/styles/_scss/_basket.scss
+++ b/src/assets/styles/_scss/_basket.scss
@@ -134,7 +134,7 @@
       font-size: $xs-size * 6;
       font-weight: bold;
       outline: none;
-      padding: $xs-size * 4 0;
+      padding: $xs-size * 4 0 $xs-size * 5;
       position: absolute;
       right: 0;
       width: 100%;
@@ -183,7 +183,7 @@
       font-size: $xs-size * 6;
       font-weight: bold;
       outline: none;
-      padding: $xs-size * 4 0;
+      padding: $xs-size * 4 0 $xs-size * 5;
       position: absolute;
       right: 0;
       width: 100%;
