--- a/src/assets/styles/_scss/_basket.scss
+++ b/src/assets/styles/_scss/_basket.scss
@@ -1,10 +1,10 @@
 .basket-box {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: $font-color;
   color: #666;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 100%;
+  height: calc(100% - 138px);
   margin: 0 auto;
   position: absolute;
   right: 0;
@@ -104,45 +104,44 @@
         }
       }
     }
+  }
 
-    .summary-text-not-display {
-      display: none;
-    }
+  .summary-text-not-display {
+    display: none;
+  }
 
-    .summary-text {
-      bottom: $l-size * 4;
-      font-size: $l-size;
-      font-weight: bold;
-      left: $l-size * 5;
-      position: absolute;
-      text-transform: uppercase;
+  .summary-text {
+    bottom: $l-size * 4;
+    font-size: $l-size;
+    font-weight: bold;
+    left: $l-size * 5;
+    position: absolute;
+    text-transform: uppercase;
 
-      span {
-        font-size: $xs-size * 6;
-      }
-    }
-
-    .button-not-display {
-      display: none;
-    }
-
-    button {
-      background-color: $button-color;
-      bottom: 0;
-      border: none;
-      color: $font-color;
+    span {
       font-size: $xs-size * 6;
-      font-weight: bold;
-      outline: none;
-      padding: $xs-size * 4 0 $xs-size * 5;
-      position: absolute;
-      right: 0;
-      width: 100%;
+    }
+  }
+  .button-not-display {
+    display: none;
+  }
 
-      &:hover {
-        cursor: pointer;
-        opacity: 0.7;
-      }
+  button#pay {
+    background-color: $button-color;
+    bottom: 0;
+    border: none;
+    color: $font-color;
+    font-size: $xs-size * 6;
+    font-weight: bold;
+    outline: none;
+    padding: $xs-size * 4 0 $xs-size * 5;
+    position: absolute;
+    right: 0;
+    width: 100%;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.7;
     }
   }
 }
