--- a/src/assets/styles/_scss/_treatment_and_room_box.scss
+++ b/src/assets/styles/_scss/_treatment_and_room_box.scss
@@ -5,10 +5,9 @@
   flex-direction: column;
   flex-wrap: wrap;
   left: 5%;
+  margin: 20px 0 0 20px;
   opacity: 0.9;
   padding: 25px;
-  position: absolute;
-  top: 100px;
   width: 90%;
 
   h2 {
@@ -46,7 +45,7 @@
     color: $edit-color;
     font-size: $xs-size * 5;
     font-weight: bold;
-    padding: $xs-size * 3;
+    padding: 6px 10px 10px 10px;
 
     &:hover {
       cursor: pointer;
@@ -55,11 +54,13 @@
   }
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 1000px) {
   .treatment-box,
   .room-box {
     left: 600px;
+    margin: 0;
     padding: 50px 50px 50px 70px;
+    position: absolute;
     top: 200px;
     width: 500px;
     min-height: 460px;
