--- a/src/assets/styles/_scss/_treatments_and_rooms_box.scss
+++ b/src/assets/styles/_scss/_treatments_and_rooms_box.scss
@@ -5,10 +5,9 @@
   flex-direction: column;
   flex-wrap: wrap;
   left: 5%;
+  margin: 20px 0 0 20px;
   opacity: 0.9;
   padding: 25px;
-  position: absolute;
-  top: 100px;
   width: 90%;
 
   h2 {
@@ -32,11 +31,13 @@
   }
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 1000px) {
   .treatments-box,
   .rooms-box {
     left: $xs-size * 14;
+    margin: 0;
     padding: 50px 50px 50px 70px;
+    position: absolute;
     top: 200px;
     width: 500px;
     min-height: 460px;
