--- a/src/assets/styles/_scss/_form.scss
+++ b/src/assets/styles/_scss/_form.scss
@@ -80,8 +80,8 @@
   }
 }
 
-@media only screen and (min-width: 1550px) {
-  form {
+@media only screen and (min-width: 500px) {
+  .form {
     margin: 0 auto;
     input {
       border: none;
