--- a/src/assets/styles/_scss/_treatment_and_room_box.scss
+++ b/src/assets/styles/_scss/_treatment_and_room_box.scss
@@ -27,6 +27,10 @@
       font-weight: bold;
     }
 
+    .thin {
+      font-weight: normal;
+    }
+
     input {
       border: none;
       color: $input-text-color;
@@ -82,6 +86,10 @@
       font-size: $xl-size;
       line-height: 1.6;
       margin-bottom: $xs-size * 8;
+    }
+
+    .thin {
+      font-weight: normal;
     }
 
     input #room-to {
