--- a/src/assets/styles/_scss/_treatment_and_room_box.scss
+++ b/src/assets/styles/_scss/_treatment_and_room_box.scss
@@ -58,28 +58,29 @@
   }
 }
 
-@media only screen and (min-width: 550px) {
-  .treatment-box,
-  .room-box {
-    width: 500px;
-    height: auto;
-  }
-}
+// @media only screen and (min-width: 550px) {
+//   .treatment-box,
+//   .room-box {
+//     width: auto;
+//     height: auto;
+//   }
+// }
 
 @media only screen and (min-width: 1550px) {
   .treatment-box,
   .room-box {
-    left: 600px;
+    height: auto;
+    left: 500px;
     margin: 0 auto;
-    padding: 50px 50px 50px 70px;
+    padding: $xl-size * 2;
     position: absolute;
-    top: 200px;
-    width: 500px;
-    min-height: 460px;
+    top: 150px;
+    width: auto;
 
     h2 {
-      font-size: $xs-size * 8;
-      margin-bottom: $xs-size * 9;
+      font-size: $xl-size;
+      font-weight: bold;
+      margin-bottom: $xs-size * 4;
     }
 
     p {
