Remove not needed scripts from package.json, changed instruction how to run app and add new styles css for basket

--- a/src/assets/styles/_scss/_basket.scss
+++ b/src/assets/styles/_scss/_basket.scss
@@ -178,6 +178,11 @@
       display: none;
     }
 
+    #basket-content-box,
+    #basket-bought-content-box {
+      max-height: 70%;
+    }
+
     .button-not-display {
       display: none;
     }
